--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -32,4 +32,4 @@ jobs:
           git commit -m "Update README"
           git push
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
