--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -30,8 +30,8 @@ jobs:
           GH_NAME: ${{ secrets.GH_NAME }}
           GH_EMAIL: ${{ secrets.GH_EMAIL }}
         run: |
-          git config --local user.email "${GH_EMAIL}"
-          git config --local user.name "${GH_NAME}"
+          git config --global user.email "${GH_EMAIL}"
+          git config --global user.name "${GH_NAME}"
           git add .
           git commit -m "Update README"
           git push https://x-access-token:${GH_PAT}@github.com/pythonicboat/pythonicboat.git
