--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -2,7 +2,7 @@ name: Update README
 
 on:
   schedule:
-    - cron: '0 12 * * *'  # Runs every day at 12 PM (noon)
+    - cron: '0 0 * * *'  # Runs every day at 12 PM (noon)
   workflow_dispatch:
 
 jobs:
@@ -30,8 +30,8 @@ jobs:
           GH_NAME: ${{ secrets.GH_NAME }}
           GH_EMAIL: ${{ secrets.GH_EMAIL }}
         run: |
-          git config --global user.email "${GH_EMAIL}"
-          git config --global user.name "${GH_NAME}"
+          git config user.email "${GH_EMAIL}"
+          git config user.name "${GH_NAME}"
           git add .
           git commit -m "Update README"
           git push https://x-access-token:${GH_PAT}@github.com/pythonicboat/pythonicboat.git
